[build-system]
requires = [
    "setuptools",
    "setuptools_scm>=8",
    "wheel",
    "numpy>=2.0",
    "Cython>=0.25.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "moments/_version.py"

[project]
name = "moments-popgen"
authors = [
    {name = "Aaron Ragsdale", email = "apragsdale@wisc.edu"},
    {name = "Simon Gravel", email = "simon.gravel@mcgill.ca"},
]
license = {text = "MIT"}
requires-python = ">=3.11, <3.14"
dynamic = ["version"]
dependencies=[
    "numpy >=2.0, <3.0",
    "cython >=0.25",
    "scipy >=1.3, <1.17",
    # As of Feb 2026, cibuildwheel was failing to find a wheel for scipy 1.17, so trying
    # to build from source and failing due to not finding openblas
    "mpmath >=1.0, <1.4",
    # mpmath 1.4 introduced many DeprecationWarnings, which turn to errors in our CI
    # See here: https://github.com/mpmath/mpmath/issues/1015
    "demes >=0.2",
]
readme = "README.md"
description = "Population genetic statistics for evolutionary inference"

[project.urls]
Repository = "https://github.com/MomentsLD/moments"
Documentation = "https://momentsld.github.io/moments/"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-frontend = "build"

[tool.cibuildwheel.macos]
build = "cp3{12,13}-*"

[tool.cibuildwheel.linux]
build = "cp*manylinux*"
archs = "x86_64"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
